# fcp-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_SERVER_ALIGNMENT.md  DEVPOST_PUNCHLIST.md  HACKATHON_PUNCHLIST.md  LICENSE  Makefile  PERFORMANCE_GUIDE.md  PUNCHLIST.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: TESTING.md  TOOLING_COMPARISON.md
src/fcp_cli/: __init__.py  config.py  main.py  utils.py
src/fcp_cli/agents/: __init__.py  research.py
src/fcp_cli/commands/: __init__.py  discover.py  labels.py  log.py  nearby.py  pantry.py  profile.py  publish.py  recipes.py  research.py  safety.py  search.py  suggest.py  taste.py
src/fcp_cli/services/: __init__.py  fcp.py  fcp_client_core.py  fcp_client_meals.py  fcp_client_pantry.py  fcp_client_recipes.py  fcp_errors.py  logfire_service.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: test_food_logging_workflow.py  test_profile_workflow.py  test_recipe_workflow.py
tests/unit/: __init__.py  test_config.py  test_coverage_complete.py  test_discover.py  test_exception_handlers.py  test_helper_functions.py  test_labels.py  test_log.py  test_log_async.py  test_log_batch_integration.py  test_log_branches.py  test_log_conditionals.py  test_log_helpers.py  test_main.py  test_nearby.py  test_nearby_defensive.py  test_nearby_validation.py  test_pantry.py  test_profile.py  test_publish.py  test_recipes.py  test_research.py  test_research_agent.py  test_research_agent_tools.py  test_research_agent_unit.py  test_research_tools_direct.py  test_safety.py  test_search.py  test_suggest.py  test_taste.py  test_tooling_freezegun_respx.py  test_tooling_hypothesis.py  test_utils.py
tests/unit/services/: test_error_handling_defensive.py  test_error_handling_edge_cases.py  test_error_handling_exhaustion.py  test_error_handling_fallback.py  test_fcp_client.py  test_fcp_client_core.py  test_fcp_client_defensive.py  test_fcp_client_meals.py  test_fcp_client_pantry.py  test_fcp_client_recipes.py  test_fcp_errors.py  test_logfire_service.py  test_models.py
