[project]
name = "fcp-cli"
version = "0.1.0"
description = "Command-line interface for the Food Context Protocol"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Food Context Protocol Contributors" }
]
keywords = ["food", "ai", "cli", "gemini", "fcp", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI
    "google-genai>=1.0.0",
    "pydantic-ai>=0.1.0",
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.0.0",
    # HTTP Client
    "httpx[http2]>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # Observability
    "logfire>=1.0.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
fcp = "fcp_cli.main:main"

[project.urls]
Homepage = "https://github.com/Food-Context-Protocol/fcp-cli"
Documentation = "https://docs.fcp.dev"
Repository = "https://github.com/Food-Context-Protocol/fcp-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcp_cli"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ty]
# ty type checker configuration

[tool.ty.rules]
# Ignore unresolved-attribute for dynamic types
unresolved-attribute = "ignore"
# Ignore invalid-argument-type for flexible patterns
invalid-argument-type = "ignore"
# Ignore unused-ignore-comment
unused-ignore-comment = "ignore"
# Ignore unresolved-import for conditional imports
unresolved-import = "ignore"
# Ignore missing-argument for optional kwargs
missing-argument = "ignore"
# Ignore unknown-argument for generated mismatches
unknown-argument = "ignore"
# Ignore possibly-missing-attribute for optional types
possibly-missing-attribute = "ignore"

[tool.coverage.run]
source = ["src/fcp_cli"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 100.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
timeout = 10
timeout_method = "thread"
markers = [
    "asyncio: async test marker",
    "unit: fast, isolated unit tests",
    "integration: tests involving multiple components",
    "slow: tests that take >1s to run",
    "cli: command-line interface tests",
    "network: tests requiring network access",
    "property: property-based tests using hypothesis",
]

[dependency-groups]
dev = [
    "prek>=0.3.2",
    "freezegun>=1.5.5",
    "respx>=0.22.0",
    "ty>=0.0.14",
    "hypothesis>=6.151.5",
    "sourcery>=1.43.0",
    "mutmut>=3.4.0",
]
